@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST xfconf-4.5.92.tar.bz2 402587 RMD160 6f6e6f900117de52cf5063def696d90259918913 SHA1 7ecd517526c9b7d1c5c92f1d471eef4d1f35929b SHA256 e3dbf570371ceff2b3e63a465994b198a7483a621e6454b04a1f07296163b746
 DIST xfconf-4.5.93.tar.bz2 399000 RMD160 1b6aefa682940f3504e327037608de0baf09d364 SHA1 cf9fecc313294575223eb4a80a77a278642234f0 SHA256 5f843e1b49ba424d99b967ddd569408cc4df4deab14d4de85d005c9b25dbb213
+DIST xfconf-4.5.99.1.tar.bz2 431293 RMD160 f6653db64073287a6fb7fea439bf74f3dfedbd7c SHA1 1728ae89f34f7d6bbc4d7d432417ab337040f363 SHA256 e10a4e7b11d4377a5998afb95bf4fbf17748378b04d62a46df7b48d391ff7da0
 EBUILD xfconf-4.5.92.ebuild 556 RMD160 74507ce696f0871dd5cf1d6f98b3c5bb42240908 SHA1 ca2769a10ae4b8af18087746c167911939f2f8cc SHA256 dd7272c26d3f6eb480c46130dd9fe4b64c9a74928cc2d548f9dff255e82c59f8
 EBUILD xfconf-4.5.93.ebuild 556 RMD160 74507ce696f0871dd5cf1d6f98b3c5bb42240908 SHA1 ca2769a10ae4b8af18087746c167911939f2f8cc SHA256 dd7272c26d3f6eb480c46130dd9fe4b64c9a74928cc2d548f9dff255e82c59f8
+EBUILD xfconf-4.5.99.1.ebuild 556 RMD160 74507ce696f0871dd5cf1d6f98b3c5bb42240908 SHA1 ca2769a10ae4b8af18087746c167911939f2f8cc SHA256 dd7272c26d3f6eb480c46130dd9fe4b64c9a74928cc2d548f9dff255e82c59f8
 EBUILD xfconf-9999.ebuild 578 RMD160 614ad31758025e674b5ccacb110047ac717c60c6 SHA1 5660ae78fc7948272c1c95d97e2340f463c5ad2f SHA256 b5771db5e25b0e362bbccb422f67c7e7c7f6cc1c76be718a0c19dca4f8eeaa6f
-MISC ChangeLog 1134 RMD160 811e9b936603079d970c4bc0c33641e9dee61c76 SHA1 f8b86b31335bb2914335c3d3083b473138f58368 SHA256 3ff291ccde03facd84d51c03b16e4ca71a7506d3f0d5b358106dcbfe35270c02
+MISC ChangeLog 1259 RMD160 a1d5aa6605472fb7c972fc46940d537cdb635d2f SHA1 4143c3bfcd4c6a9e29d2e19f025f63d3068c60c0 SHA256 af18fabfa4b98314e1df1c7c997ccc8e4abcc6d9132979b0e535ed134f845d0d
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEYcACgkQKhnDs22gwa+3+wCfYWzkR1vadZHm/V4lQouR68j9
-4q0An0rU5RXlkvpS/7AELehOWjPq63tn
-=wYt7
+iEYEARECAAYFAkl9xcAACgkQKhnDs22gwa+6yACg1bPZBWfJnStTq6EzfO22S+5V
+2KsAoIbeKXWBa5iJxISaTjJiRqRuLknb
+=zYrW
 -----END PGP SIGNATURE-----
