@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*xfconf-4.5.99.1 (26 Jan 2009)
+
+  26 Jan 2009; Christoph Mende <angelos@gentoo.org> +xfconf-4.5.99.1.ebuild:
+  Xfce-4.6 RC1
+
 *xfconf-4.5.93 (14 Jan 2009)
 
   14 Jan 2009; Christoph Mende <angelos@gentoo.org> +xfconf-4.5.93.ebuild:
